NXP-30831: cleanup / format